<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TinyDateSample">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="16sp"
        android:text="@string/date_format"
        android:textColor="@color/black"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/textView"
        android:layout_marginStart="10dp"
        android:id="@+id/dateFormat_spinner"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:background="@color/orange"
        android:layout_below="@id/dateFormat_spinner"
        android:layout_marginTop="40dp"
        android:textColor="#fff"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/select_date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_textView"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/button"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_textView"
        android:textSize="14sp"
        android:id="@+id/selected_date_text"
        android:text="@string/selected_date"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_textView"
        android:textSize="15sp"
        android:id="@+id/selectedDate"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/selected_date_text"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_date_text"
        android:textSize="14sp"
        android:id="@+id/selected_day_text"
        android:text="@string/selected_day"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_date_text"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:id="@+id/selectedDay"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/selected_day_text"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_day_text"
        android:textSize="14sp"
        android:id="@+id/selected_month_text"
        android:text="@string/selected_month"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_day_text"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:id="@+id/selectedMonth"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/selected_month_text"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_month_text"
        android:textSize="14sp"
        android:id="@+id/selected_monthNumber_text"
        android:text="@string/selected_month_number"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_month_text"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:id="@+id/selectedMonthNumber"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/selected_monthNumber_text"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_monthNumber_text"
        android:textSize="14sp"
        android:id="@+id/selected_year_text"
        android:text="@string/selected_year"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_monthNumber_text"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:id="@+id/selectedYear"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/selected_year_text"
        android:layout_marginTop="20dp"/>

</RelativeLayout>